--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "remix": "^2.16.0",
     "remix-island": "^0.2.0",
     "remix-utils": "^7.7.0",
     "shiki": "^1.24.0",
@@ -133,7 +134,7 @@
     "@cloudflare/workers-types": "^4.20241127.0",
     "@iconify-json/ph": "^1.2.1",
     "@iconify/types": "^2.0.0",
-    "@remix-run/dev": "^2.15.2",
+    "@remix-run/dev": "^2.16.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/diff": "^5.2.3",
