--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Octoatask.new related issues
+  - name: Octotask.new related issues
     url: https://github.com/octotask/octotask.new/issues/new/choose
-    about: Report issues related to Octoatask.new (not Octoatask.diy)
+    about: Report issues related to Octotask.new (not Octotask)
   - name: Chat
-    url: https://thinktank.ottomator.ai
-    about: Ask questions and discuss with other Octoatask.diy users.
+    url: https://octotask.khulnasoft.com
+    about: Ask questions and discuss with other Octotask users.
