--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 services:
   app-prod:
-    image: octoatask-ai:production
+    image: octotask-ai:production
     build:
       context: .
       dockerfile: Dockerfile
-      target: octoatask-ai-production
+      target: octotask-ai-production
     ports:
       - '5173:5173'
     env_file: '.env.local'
@@ -34,9 +34,9 @@ services:
       - production
 
   app-dev:
-    image: octoatask-ai:development
+    image: octotask-ai:development
     build:
-      target: octoatask-ai-development
+      target: octotask-ai-development
     env_file: '.env.local'
     environment:
       - NODE_ENV=development
