--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "octoatask",
+  "name": "octotask",
   "description": "An AI Agent",
   "private": true,
   "license": "MIT",
@@ -18,9 +18,9 @@
     "start:unix": "bindings=$(./bindings.sh) && wrangler pages dev ./build/client $bindings",
     "start": "node -e \"const { spawn } = require('child_process'); const isWindows = process.platform === 'win32'; const cmd = isWindows ? 'npm run start:windows' : 'npm run start:unix'; const child = spawn(cmd, { shell: true, stdio: 'inherit' }); child.on('exit', code => process.exit(code));\"",
     "dockerstart": "bindings=$(./bindings.sh) && wrangler pages dev ./build/client $bindings --ip 0.0.0.0 --port 5173 --no-show-interactive-dev-session",
-    "dockerrun": "docker run -it -d --name octoatask-ai-live -p 5173:5173 --env-file .env.local octoatask-ai",
-    "dockerbuild:prod": "docker build -t octoatask-ai:production -t octoatask-ai:latest --target octoatask-ai-production .",
-    "dockerbuild": "docker build -t octoatask-ai:development -t octoatask-ai:latest --target octoatask-ai-development .",
+    "dockerrun": "docker run -it -d --name octotask-ai-live -p 5173:5173 --env-file .env.local octotask-ai",
+    "dockerbuild:prod": "docker build -t octotask-ai:production -t octotask-ai:latest --target octotask-ai-production .",
+    "dockerbuild": "docker build -t octotask-ai:development -t octotask-ai:latest --target octotask-ai-development .",
     "typecheck": "tsc",
     "typegen": "wrangler types",
     "preview": "pnpm run build && pnpm run start",
@@ -121,7 +121,6 @@
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "remix": "^2.16.0",
     "remix-island": "^0.2.0",
     "remix-utils": "^7.7.0",
     "shiki": "^1.24.0",
@@ -134,7 +133,7 @@
     "@cloudflare/workers-types": "^4.20241127.0",
     "@iconify-json/ph": "^1.2.1",
     "@iconify/types": "^2.0.0",
-    "@remix-run/dev": "^2.16.0",
+    "@remix-run/dev": "^2.15.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/diff": "^5.2.3",
